// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form with one child 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  border: solid 1px #C1C6CC;
  height: 28px;
  padding: 0 0.5rem;
  border-radius: 4px;
  font-size: 0.875rem;
}

.c2 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5rem;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  border: 0;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-weight: 600;
  color: #262D33;
  margin-right: 0.5rem;
  font-size: 0.875rem;
}

<form>
  <div
    className="c0"
  >
    <label
      className="c1"
    >
      label
    </label>
    <div
      className="c2 c3"
    >
      <div
        className=""
      >
        <input
          className="c4"
          name="name"
          type="text"
        />
      </div>
    </div>
  </div>
</form>
`;

exports[`Form with one invalid child and a submit button 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7 {
  border-radius: 0.25rem;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Open Sans',Helvetica,Arial,sans-serif;
  outline: none;
  padding-top: 0;
  padding-bottom: 0;
  -webkit-transition: border 80ms;
  transition: border 80ms;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  vertical-align: middle;
  white-space: nowrap;
  padding-left: 1.25rem;
  padding-right: 1.25rem;
  font-size: 1rem;
  line-height: 34px;
  border-style: solid;
  border-width: 0.0625rem;
  background: #64518A;
  border-color: #64518A;
  color: #FFFFFF;
}

.c7:focus {
  box-shadow: 0 0 0 0.15rem rgba(100,81,138,0.25);
}

.c7[disabled] {
  cursor: default;
  -webkit-filter: grayscale(0.3);
  filter: grayscale(0.3);
  opacity: 0.25;
}

.c7[disabled]:hover,
.c7[disabled]:active,
.c7[disabled]:focus {
  background-color: #64518A;
  border-color: #C1C6CC;
}

.c7:hover,
.c7:focus,
.c7.hover {
  background: #473764;
  border-color: #473764;
}

.c7:active,
.c7.active {
  background: #2A1B60;
  border-color: #2A1B60;
}

.c4 {
  border: solid 1px #C1C6CC;
  height: 28px;
  padding: 0 0.5rem;
  border-radius: 4px;
  font-size: 0.875rem;
}

.c5 {
  border: solid 1px #C1C6CC;
  height: 28px;
  padding: 0 0.5rem;
  border-radius: 4px;
  font-size: 0.875rem;
  background-color: #FFF2F4;
}

.c2 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5rem;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  border: 0;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-weight: 600;
  color: #262D33;
  margin-right: 0.5rem;
  font-size: 0.875rem;
}

.c6 {
  margin-right: 0.5rem;
  margin-top: 0.5rem;
  font-size: 0.75rem;
  color: #B2121F;
}

<form>
  <div
    className="c0"
  >
    <label
      className="c1"
    >
      label1
    </label>
    <div
      className="c2 c3"
    >
      <div
        className=""
      >
        <input
          className="c4"
          name="name1"
          type="text"
        />
      </div>
    </div>
  </div>
  <div
    className="c0"
  >
    <label
      className="c1"
    >
      label2
    </label>
    <div
      className="c2 c3"
    >
      <div
        className=""
      >
        <input
          className="c5"
          name="name2"
          type="text"
        />
      </div>
      <div
        className=""
      >
        <div
          className="c6"
        >
          e2
        </div>
      </div>
    </div>
  </div>
  <button
    className="c7 "
  >
    Submit
  </button>
</form>
`;

exports[`Form with two invalid children 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  border: solid 1px #C1C6CC;
  height: 28px;
  padding: 0 0.5rem;
  border-radius: 4px;
  font-size: 0.875rem;
  background-color: #FFF2F4;
}

.c2 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5rem;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  border: 0;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-weight: 600;
  color: #262D33;
  margin-right: 0.5rem;
  font-size: 0.875rem;
}

.c5 {
  margin-right: 0.5rem;
  margin-top: 0.5rem;
  font-size: 0.75rem;
  color: #B2121F;
}

<form>
  <div
    className="c0"
  >
    <label
      className="c1"
    >
      label1
    </label>
    <div
      className="c2 c3"
    >
      <div
        className=""
      >
        <input
          className="c4"
          name="name1"
          type="text"
        />
      </div>
      <div
        className=""
      >
        <div
          className="c5"
        >
          e1
        </div>
      </div>
    </div>
  </div>
  <div
    className="c0"
  >
    <label
      className="c1"
    >
      label2
    </label>
    <div
      className="c2 c3"
    >
      <div
        className=""
      >
        <input
          className="c4"
          name="name2"
          type="text"
        />
      </div>
      <div
        className=""
      >
        <div
          className="c5"
        >
          e2
        </div>
      </div>
    </div>
  </div>
</form>
`;
